# csci344

./: assignments-data.js  index.html  index_old.html  index_redo.html  main.js  main_redo.js  styles.css  styles_redo.css
homework/hw02/: index.html  styles.css
homework/hw03/: index.html
homework/hw03/js/: main.js  (+1 more)
homework/hw05/: app.py  users.csv
homework/hw06/: app.py
lectures/: react-lifting-up-practice.html
lectures/intro-css-gallery/: index.html  styles.css
lectures/intro-css-gallery-flex/: index.html  styles.css
lectures/intro-to-react/: index.html  package.json
lectures/lecture04/: index.html  page2.html
lectures/lecture13/: 02-map-demo.js  03-filter-demo.js
lectures/lecture19/: 01_functions.py  in_class_challenges.py
lectures/orm-introduction/: .env  tester.py  users.csv
lectures/react-practice/: App.js
practice-quizes/practice-quiz-lecture-13/: 06-practice.js
practice-quizes/practice-quiz01/: index.html  style.css
practice-quizes/practice-quiz02/: styles.css
practice-quizes/practice-quiz03/: basicProrammingPractice.js  index.html  main.js  styles.css
quizzes/quiz01/: index.html  styles.css
tutorials/tutorial01/: index.html  music.html  videos.html
tutorials/tutorial03/: index.html  tailwind.config.js
tutorials/tutorial04/: main.js
tutorials/tutorial06/: main.js
tutorials/tutorial09/: app.py  pyproject.toml
tutorials/tutorial09/static/: style.css
tutorials/tutorial09/templates/: quote-of-the-day.html  restaurant.html  restaurants.html
tutorials/tutorial09/templates/includes/: header.html  restaurant-card.html
(+121 files in other folders)
